--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+
+<body class="fira-sans-normal">
+    <header>
+        <nav>
+            <h3 class="nav-title">Bangladesh 2.0</h3>
+            <ul>
+                <li><a href=""><button class="btn-sign-in">Sign In</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-2">
+                <div class="banner-content">
+                    <h4 class="banner-title">Bangladesh 2.0</h4>
+                    <h1 class="banner-headings">Idea , innovation ,<br>
+                        vision and challenges in New Bangladesh.</h1>
+                    <button class="btn">Explore New Bangladesh</button>
+                </div>
+                <div>
+
+                    <img class="banner-picture" src="./assets/hero.png" alt="Picture of achievement">
+                </div>
+            </div>
+
+        </div>
+
+    </header>
+
+    <main>
+        <section class="pillars">
+            <h2 class="section-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillars-container">
+                <div class="pillar">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="pillars-title">Innovation</h3>
+                    <p class="pillars-description">Introducing new ideas, technologies, or methods to improve existing systems</p>
+                </div>
+                <div class="pillar">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="pillars-title">Sustainability</h3>
+                    <p class="pillars-description">Practices ensuring environmental, social, and economic balance for future generations</p>
+                </div>
+                <div class="pillar">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="pillars-title">Infrastructure</h3>
+                    <p class="pillars-description">Fundamental physical structures and systems supporting societal function and growth</p>
+                </div>
+                <div class="pillar">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="pillars-title">Empowerment</h3>
+                    <p class="pillars-description">Enabling individuals to gain control, confidence, and decision-making power</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
