vision of future added

--- a/index.html
+++ b/index.html
@@ -45,23 +45,48 @@
             <div class="pillars-container">
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
-                    <h3 class="pillars-title">Innovation</h3>
-                    <p class="pillars-description">Introducing new ideas, technologies, or methods to improve existing systems</p>
+                    <h3 class="title">Innovation</h3>
+                    <p class="description">Introducing new ideas, technologies, or methods to improve existing systems</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
-                    <h3 class="pillars-title">Sustainability</h3>
-                    <p class="pillars-description">Practices ensuring environmental, social, and economic balance for future generations</p>
+                    <h3 class="title">Sustainability</h3>
+                    <p class="description">Practices ensuring environmental, social, and economic balance for future generations</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
-                    <h3 class="pillars-title">Infrastructure</h3>
-                    <p class="pillars-description">Fundamental physical structures and systems supporting societal function and growth</p>
+                    <h3 class="title">Infrastructure</h3>
+                    <p class="description">Fundamental physical structures and systems supporting societal function and growth</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
-                    <h3 class="pillars-title">Empowerment</h3>
-                    <p class="pillars-description">Enabling individuals to gain control, confidence, and decision-making power</p>
+                    <h3 class="title">Empowerment</h3>
+                    <p class="description">Enabling individuals to gain control, confidence, and decision-making power</p>
+                </div>
+            </div>
+        </section>
+        <section class="vision-of-future">
+            <h2 class="section-title">The Vision of Future</h2>
+            <p class="description future-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <div class="future-container">
+                <div class="future" style="background-color: rgba(84, 144, 245, 0.2);;">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="title">Digital Transformation</h3>
+                    <p class="description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-future btn-future-01">Learn More</button>
+                </div>
+                <div class="future" style="background-color: rgb(198, 228, 214);;">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="title">Green Energy</h3>
+                    <p class="description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-future btn-future-02">Learn More</button>
+                </div>
+                <div class="future" style="background-color: rgb(247, 235, 207);;">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="title">Modern Infrastructure</h3>
+                    <p class="description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn-future btn-future-03">Learn More</button>
                 </div>
             </div>
         </section>
