--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=48&id=Aqza8XCJtcQw&format=png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -46,49 +47,66 @@
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Innovation</h3>
-                    <p class="description">Introducing new ideas, technologies, or methods to improve existing systems</p>
+                    <p class="description">Introducing new ideas, technologies, or methods to improve existing systems
+                    </p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Sustainability</h3>
-                    <p class="description">Practices ensuring environmental, social, and economic balance for future generations</p>
+                    <p class="description">Practices ensuring environmental, social, and economic balance for future
+                        generations</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Infrastructure</h3>
-                    <p class="description">Fundamental physical structures and systems supporting societal function and growth</p>
+                    <p class="description">Fundamental physical structures and systems supporting societal function and
+                        growth</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Empowerment</h3>
-                    <p class="description">Enabling individuals to gain control, confidence, and decision-making power</p>
+                    <p class="description">Enabling individuals to gain control, confidence, and decision-making power
+                    </p>
                 </div>
             </div>
         </section>
         <section class="vision-of-future">
             <h2 class="section-title">The Vision of Future</h2>
-            <p class="description future-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="description future-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
 
             <div class="future-container">
                 <div class="future" style="background-color: rgba(84, 144, 245, 0.2);;">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Digital Transformation</h3>
-                    <p class="description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p class="description">Creating a nationwide digital ecosystem to enhance connectivity and access to
+                        services for all citizens.</p>
                     <button class="btn-future btn-future-01">Learn More</button>
                 </div>
                 <div class="future" style="background-color: rgb(198, 228, 214);;">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Green Energy</h3>
-                    <p class="description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <p class="description">Investments in solar and wind energy to ensure a sustainable and eco-friendly
+                        future.</p>
                     <button class="btn-future btn-future-02">Learn More</button>
                 </div>
                 <div class="future" style="background-color: rgb(247, 235, 207);;">
                     <img src="./assets/card-icon.png" alt="">
                     <h3 class="title">Modern Infrastructure</h3>
-                    <p class="description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p class="description">Building state-of-the-art infrastructure to support economic growth and
+                        global competitiveness.</p>
                     <button class="btn-future btn-future-03">Learn More</button>
                 </div>
             </div>
+        </section>
+        <section class="speech">
+               <p class="description">
+                "We must ensure that we do not miss this chance to build a new Bangladesh due to our differences. If we lose this opportunity now, we will be defeated as a nation. To the martyrs, the injured and the living students, we pledge that we will not let this achievement go to waste.We were initially invited by the student. The general populace supported our appointment. We will continually remind everyone that our departure will occur when they say so.In times of great difficulty, it is crucial to be patient.We are one family. We have one goal.Our goal is unified: a liberal, democratic, non-discriminatory and non-sectarian Bangladesh.We have initiated steps to ensure good governance in the banking sector, which has become an industry rife with looting and corruption. Skilled professionals are being recruited, and efforts are underway to restore order in the banking sector, create a conducive business environment and control the prices of daily necessities to ease the lives of the people."
+               </p>
+               <h3 class="speech-title">Dr. Muhammad Yunus</h3>
+               <p class="description">Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
     </main>
 
