--- a/index.html
+++ b/index.html
@@ -102,11 +102,52 @@
             </div>
         </section>
         <section class="speech">
-               <p class="description">
+               <p class="description-of-speech">
                 "We must ensure that we do not miss this chance to build a new Bangladesh due to our differences. If we lose this opportunity now, we will be defeated as a nation. To the martyrs, the injured and the living students, we pledge that we will not let this achievement go to waste.We were initially invited by the student. The general populace supported our appointment. We will continually remind everyone that our departure will occur when they say so.In times of great difficulty, it is crucial to be patient.We are one family. We have one goal.Our goal is unified: a liberal, democratic, non-discriminatory and non-sectarian Bangladesh.We have initiated steps to ensure good governance in the banking sector, which has become an industry rife with looting and corruption. Skilled professionals are being recruited, and efforts are underway to restore order in the banking sector, create a conducive business environment and control the prices of daily necessities to ease the lives of the people."
                </p>
                <h3 class="speech-title">Dr. Muhammad Yunus</h3>
                <p class="description">Chief Adviser of the People's Republic of Bangladesh</p>
+        </section>
+        <section class="recent-news">
+            <h2 class="section-title">Recent News</h2>
+            <p class="description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <div class="recent-news-container">
+                <img class="image-info" src="./assets/satelite.png" alt="">
+                <div class="news">
+                    <h2 class="recent-title">Bangladesh Launches New Satellite</h2>
+                    <img src="./assets/al-jazeera.png" alt="">
+                    <div class="date-time"><p class="description">Date: 05/01/2025</p>
+                        <p class="description">Time: 10.25 PM</p></div>
+                    <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                </div>
+            </div>
+            <div class="recent-news-container">
+                <div class="news">
+                    <h2 class="recent-title">Bangladesh Launches New Satellite</h2>
+                    <img src="./assets/al-jazeera.png" alt="">
+                    <div class="date-time"><p class="description">Date: 05/01/2025</p>
+                        <p class="description">Time: 10.25 PM</p></div>
+                    <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                </div>
+                <img class="image-info" src="./assets/satelite.png" alt="">
+            </div>
+            <div class="recent-news-container">
+                <img class="image-info" src="./assets/satelite.png" alt="">
+                <div class="news">
+                    <h2 class="recent-title">Bangladesh Launches New Satellite</h2>
+                    <img src="./assets/al-jazeera.png" alt="">
+                    <div class="date-time"><p class="description">Date: 05/01/2025</p>
+                        <p class="description">Time: 10.25 PM</p></div>
+                    <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                </div>
+            </div>
         </section>
     </main>
 
