--- a/index.html
+++ b/index.html
@@ -205,7 +205,17 @@
     </main>
 
     <footer>
-
+      <section>
+        <div class="contact-us">
+            <h2 class="footer-title">Bangladesh 2.0</h2>
+            <hr>
+            <div class="contacts">
+                <a href="facebook.com"><img src="assets/facebook.png" alt=""></a>
+                <a href="instagram.com"><img src="assets/instagram.png" alt=""></a>
+                <a href="twitter.com"><img src="assets/x.png" alt=""></a>
+             </div>
+        </div>
+      </section>
     </footer>
 </body>
 
