--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="contacts">
                 <a href="facebook.com"><img src="assets/facebook.png" alt=""></a>
                 <a href="instagram.com"><img src="assets/instagram.png" alt=""></a>
-                <a href="twitter.com"><img src="assets/x.png" alt=""></a>
+                <a href="https://x.com/i/flow/login"><img src="assets/x.png" alt=""></a>
              </div>
         </div>
       </section>
